# telegram_bot

./: alembic.ini  pyproject.toml
bot/: config.py  database.py  handlers.py  kb.py  main.py  payment_system.py  text.py
migrations/: env.py
migrations/versions/: 3191d789ad3a_initial.py
models/: models.py
service/: user.py
